[package]
name = "u-siem-syslog"
version = "0.1.1"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Syslog listener for uSIEM"
repository = "https://github.com/u-siem/u-siem-core"
keywords = ["SIEM", "security", "logs","syslog","dns"]
categories = ["parsing"]
edition = "2021"

[lib]
name = "usiem_syslog"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
u-siem = {version = "0"}
coarsetime = {version = "0.1.18" }