[package]
name = "u-siem-syslog"
version = "0.2.0"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Syslog listener for uSIEM"
repository = "https://github.com/u-siem/u-siem-core"
keywords = ["SIEM", "security", "logs","syslog","dns"]
categories = ["parsing"]
edition = "2021"

[features]
default = ["metrics", "tls"]
metrics = []
tls = ["dep:rustls", "dep:rustls-pemfile"]

[lib]
name = "usiem_syslog"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
#u-siem = {version = "0", path = "../u-siem-core"}
u-siem = {version = "0"}
coarsetime = {version = "0.1.18" }
rustls = {version = "0.22.2", default_features = false, features = ["ring", "tls12"], optional = true }
rustls-pemfile = { version = "2.0.0", optional = true }

[dev-dependencies]
serial_test = "3.0.0"
